tests/compile-fail/super_trait_not_implemented.stderr
error[E0277]: the trait bound `Box<T>: Supi` is not satisfied
 --> tests/compile-fail/super_trait_not_implemented.rs:5:1
  |
5 | #[auto_impl(Box, &)]
  | ^^^^^^^^^^^^^^^^^^^^ the trait `Supi` is not implemented for `Box<T>`
  |
  = help: the trait `Supi` is implemented for `Dog`
note: required by a bound in `Foo`
 --> tests/compile-fail/super_trait_not_implemented.rs:6:12
  |
6 | trait Foo: Supi {}
  |            ^^^^ required by this bound in `Foo`
  = note: this error originates in the attribute macro `auto_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&'a T: Supi` is not satisfied
 --> tests/compile-fail/super_trait_not_implemented.rs:5:1
  |
5 | #[auto_impl(Box, &)]
  | ^^^^^^^^^^^^^^^^^^^^ the trait `Supi` is not implemented for `&'a T`
  |
  = help: the trait `Supi` is implemented for `Dog`
note: required by a bound in `Foo`
 --> tests/compile-fail/super_trait_not_implemented.rs:6:12
  |
6 | trait Foo: Supi {}
  |            ^^^^ required by this bound in `Foo`
  = note: this error originates in the attribute macro `auto_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
